first step to make 1 Test
starting with 1 Test
and editing .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 .vs/slnx.sqlite
+UnitTestCases/obj/Release/.NETFramework,Version=v4.7.2.AssemblyAttributes.cs
+UnitTestCases/obj/Debug/UnitTestCases.csproj.AssemblyReference.cache
