--- a/UnitTestCases/UnitTestCases.csproj
+++ b/UnitTestCases/UnitTestCases.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\Delay.cs" />
     <Compile Include="Init\Init.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
