--- a/UnitTestCases/UnitTestCases.csproj
+++ b/UnitTestCases/UnitTestCases.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helper\Delay.cs" />
+    <Compile Include="Helper\Variables.cs" />
     <Compile Include="Init\Init.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
