add new feature
path of driver and app are in txt-files
expanding first UI-Test

--- a/UnitTestCases/UnitTestCases.csproj
+++ b/UnitTestCases/UnitTestCases.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
     </Reference>
@@ -70,7 +71,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helper\Delay.cs" />
-    <Compile Include="Helper\Variables.cs" />
     <Compile Include="Init\Init.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +78,11 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Helper\AppPath1.txt" />
+    <Content Include="Helper\AppPath2.txt" />
+    <Content Include="Helper\DriverPath.txt" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
