edit pathoption with XML
Path from driver and app are located in app.config

--- a/UnitTestCases/app.config
+++ b/UnitTestCases/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <!--<add key="AppPathLaptop" value="C:\Program Files\Notepad++\notepad++.exe"/>-->
+    <add key="AppPathDesktop" value="C:\Program Files (x86)\Notepad++\notepad++.exe"/>
+    <add key="DriverPath" value="C:\Program Files (x86)\Windows Application Driver\WinAppDriver.exe"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
